Fix unnecessary submit triggers due to "system." name fields

--- a/templates/parts/section-drones.html
+++ b/templates/parts/section-drones.html
@@ -51,7 +51,7 @@
 						<tr>
 							<td>{{ localize 'shadowrun6.vehicle.mode_label' }}:</td>
 							<td>
-								<select name="vehicleOpMode{{id}}" data-field="system.vehicle.opMode" data-field="system.vehicle.opMode" data-item-id="{{this.id}}">
+								<select name="vehicleOpMode{{id}}" data-field="system.vehicle.opMode" data-item-id="{{this.id}}">
 								{{selectOptions ../config.VEHICLE_MODE selected=system.vehicle.opMode localize=true}}
 								</select>
 							</td>
