--- a/templates/parts/section-riggingbase.html
+++ b/templates/parts/section-riggingbase.html
@@ -8,7 +8,7 @@
 			<tr>
 				<td>{{localize 'shadowrun6.item.vehicle.rigRating.long'}}</td>
 				<td>
-					<select name="system.controlRig" data-field="system.controlRig">
+					<select name="system_controlRig" data-field="system.controlRig">
                      {{selectOptions config.CONTROL_RIG_RATING selected=system.controlRig localize=true}}
          		</select>
 				</td>
