--- a/templates/parts/section-vehicles.html
+++ b/templates/parts/section-vehicles.html
@@ -52,8 +52,8 @@
         	   	<tr>
         	   		<td>{{ localize 'shadowrun6.vehicle.mode_label' }}:</td>
         	   		<td>
-        	   			<select name="system.vehicle.opMode" data-field="system.vehicle.opMode" data-item-id="{{this.id}}">
-                     {{selectOptions ../config.VEHICLE_MODE selected=system.vehicle.opMode localize=true}}
+        	   			<select name="system_vehicle_opMode" data-field="system.vehicle.opMode" data-item-id="{{this.id}}">
+                     		{{selectOptions ../config.VEHICLE_MODE selected=system.vehicle.opMode localize=true}}
          				</select>
         	   		</td>
         	   		<td></td>
