--- a/templates/parts/vehicle-speed.html
+++ b/templates/parts/vehicle-speed.html
@@ -12,7 +12,7 @@
 </div>
 <div class="vehicle-section">
 	<label>{{localize 'shadowrun6.label.mode_of_operation'}}</label> 
-	<select name="vehicleOpMode" data-field="system.vehicle.opMode" data-field="system.vehicle.opMode" data-item-id="{{id}}">
+	<select name="vehicleOpMode" data-field="system.vehicle.opMode" data-item-id="{{id}}">
 	{{selectOptions config.VEHICLE_MODE selected=system.vehicle.opMode localize=true}}
 	</select>
 </div>
