--- a/templates/item/shadowrun6-focus-sheet.html
+++ b/templates/item/shadowrun6-focus-sheet.html
@@ -12,7 +12,7 @@
                     </tr>
                     <tr style="text-align:center">
                             <td class="centered">
-                                    <input name="rating" data-field="system.rating" value="{{item.system.rating}}" type="number" class="box centered" style="width:2em"/>
+                                    <input name="system.rating" data-field="system.rating" value="{{item.system.rating}}" type="number" class="box centered" style="width:2em"/>
                             </td>
                     </tr>
             </table>
