--- a/templates/item/shadowrun6-martialartstyle-sheet.html
+++ b/templates/item/shadowrun6-martialartstyle-sheet.html
@@ -8,23 +8,23 @@
             <table>
                 <tr>
                     <td><span style="vertical-align: middle;">{{localize 'shadowrun6.item.mastyle.category.grappling'}}</span>
-                        <input name="grappling" style="vertical-align: middle;" type="checkbox" {{checked item.system.category.grappling}}
+                        <input name="system.category.grappling" style="vertical-align: middle;" type="checkbox" {{checked item.system.category.grappling}}
                             data-field="system.category.grappling"  />
                     </td>
                     <td><span style="vertical-align: middle;">{{localize 'shadowrun6.item.mastyle.category.mobility'}}</span>
-                        <input name="mobility" style="vertical-align: middle;" type="checkbox" {{checked item.system.category.mobility}}
+                        <input name="system.category.mobility" style="vertical-align: middle;" type="checkbox" {{checked item.system.category.mobility}}
                             data-field="system.category.mobility"  />
                     </td>
                     <td><span style="vertical-align: middle;">{{localize 'shadowrun6.item.mastyle.category.striking'}}</span>
-                        <input name="striking" style="vertical-align: middle;" type="checkbox" {{checked item.system.category.striking}}
+                        <input name="system.category.striking" style="vertical-align: middle;" type="checkbox" {{checked item.system.category.striking}}
                             data-field="system.category.striking" />
                     </td>
                     <td><span style="vertical-align: middle;">{{localize 'shadowrun6.item.mastyle.category.weapon'}}</span>
-                        <input name="weapon" style="vertical-align: middle;" type="checkbox" {{checked item.system.category.weapon}}
+                        <input name="system.category.weapon" style="vertical-align: middle;" type="checkbox" {{checked item.system.category.weapon}}
                             data-field="system.category.weapon" />
                     </td>
                     <td><span style="vertical-align: middle;">{{localize 'shadowrun6.item.mastyle.category.ranged'}}</span>
-                        <input name="ranged" style="vertical-align: middle;" type="checkbox" {{checked item.system.category.ranged}}
+                        <input name="system.category.ranged" style="vertical-align: middle;" type="checkbox" {{checked item.system.category.ranged}}
                             data-field="system.category.ranged" />
                     </td>
             </table>
