--- a/templates/item/shadowrun6-metamagic-sheet.html
+++ b/templates/item/shadowrun6-metamagic-sheet.html
@@ -12,13 +12,13 @@
                 </tr>
                 <tr style="text-align:center">
                     <td>
-                        <input name="level" style="vertical-align: middle;" type="checkbox" {{checked item.system.level}} data-field="system.level" />
+                        <input name="system.level" style="vertical-align: middle;" type="checkbox" {{checked item.system.level}} data-field="system.level" />
                     </td>
                     <td>
-                        <input name="adepts" style="vertical-align: middle;" type="checkbox" {{checked item.system.adepts}} data-field="system.adepts" />
+                        <input name="system.adepts" style="vertical-align: middle;" type="checkbox" {{checked item.system.adepts}} data-field="system.adepts" />
                     </td>
                     <td>
-                        <input name="mages" style="vertical-align: middle;" type="checkbox" {{checked item.system.mages}} data-field="system.mages" />
+                        <input name="system.mages" style="vertical-align: middle;" type="checkbox" {{checked item.system.mages}} data-field="system.mages" />
                     </td>
                 </tr>
             </table>
