--- a/templates/item/shadowrun6-ritual-sheet.html
+++ b/templates/item/shadowrun6-ritual-sheet.html
@@ -16,19 +16,19 @@
                                 </tr>
                                 <tr style="text-align:center">
                                         <td class="centered">
-                                                <input name="threshold" data-field="system.threshold" value="{{item.system.threshold}}" type="number" class="box centered" style="width:2em"/>
+                                                <input name="system.threshold" data-field="system.threshold" value="{{item.system.threshold}}" type="number" class="box centered" style="width:2em"/>
                                         </td>
                                         <td class="centered">
-                                                <input name="anchored" style="vertical-align: middle;" type="checkbox" {{checked item.system.feature.anchored}} data-field="feature.anchored" />
+                                                <input name="system.features.anchored" style="vertical-align: middle;" type="checkbox" {{checked item.system.features.anchored}} data-field="system.features.anchored" />
                                         </td>
                                         <td class="centered">
-                                                <input name="materialLink" style="vertical-align: middle;" type="checkbox" {{checked item.system.feature.material_link}} data-field="feature.material_link" />
+                                                <input name="system.features.material_link" style="vertical-align: middle;" type="checkbox" {{checked item.system.features.material_link}} data-field="system.features.material_link" />
                                         </td>
                                         <td class="centered">
-                                                <input name="minion" style="vertical-align: middle;" type="checkbox" {{checked item.system.feature.minion}} data-field="feature.minion" />
+                                                <input name="system.features.minion" style="vertical-align: middle;" type="checkbox" {{checked item.system.features.minion}} data-field="system.features.minion" />
                                         </td>
                                         <td class="centered">
-                                                <input name="spotter" style="vertical-align: middle;" type="checkbox" {{checked item.system.feature.spotter}} data-field="feature.spotter" />
+                                                <input name="system.features.spotter" style="vertical-align: middle;" type="checkbox" {{checked item.system.features.spotter}} data-field="system.features.spotter" />
                                         </td>
                                 </tr>
                         </table>
