--- a/templates/item/shadowrun6-sin-sheet.html
+++ b/templates/item/shadowrun6-sin-sheet.html
@@ -10,7 +10,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <select name="sinQuality" data-field="system.quality">
+                        <select name="system.quality" data-field="system.quality">
                             {{selectOptions config.SIN_QUALITY selected=item.system.quality localize=true}}
                         </select>
                     </td>
