--- a/templates/item/shadowrun6-skill-sheet.html
+++ b/templates/item/shadowrun6-skill-sheet.html
@@ -11,7 +11,7 @@
                 </tr>
                 <tr>
                     <td class="centered">
-                        <select name="skillLanguagePoints" data-field="system.points" style="width: 8em; flex-grow:3">
+                        <select name="system.points" data-field="system.points" style="width: 8em; flex-grow:3">
                             <option value="1" {{#iff item.system.points '==' 1}}selected{{/iff}}>{{ localize 'shadowrun6.section.skills.language-level.normal' }}</option>
                             <option value="2" {{#iff item.system.points '==' 2}}selected{{/iff}}>{{ localize 'shadowrun6.section.skills.language-level.special' }}</option>
                             <option value="3" {{#iff item.system.points '==' 3}}selected{{/iff}}>{{ localize 'shadowrun6.section.skills.language-level.expert' }}</option>
