--- a/templates/item/shadowrun6-adeptpower-sheet.html
+++ b/templates/item/shadowrun6-adeptpower-sheet.html
@@ -12,15 +12,15 @@
                 </tr>
                 <tr>
                     <td>
-                        <select name="adeptPowerActivation" data-field="system.activation">
+                        <select name="system.activation" data-field="system.activation">
                             {{selectOptions config.adeptpower_activation selected=item.system.activation localize=true}}
                         </select>
                     </td>
                     <td>
-                        <input name="cost" data-field="system.cost" value="{{item.system.cost}}" type="number" class="box centered" />
+                        <input name="system.cost" data-field="system.cost" value="{{item.system.cost}}" type="number" class="box centered" />
                     </td>
                     <td>
-                        <input name="hasLevel" style="vertical-align: middle;" type="checkbox" {{checked item.system.hasLevel}}
+                        <input name="system.hasLevel" style="vertical-align: middle;" type="checkbox" {{checked item.system.hasLevel}}
                             data-field="system.hasLevel" />
                     </td>
                 </tr>
