Fix Skill Pool overrides not working correctly (used by Skillwires and such) (#204)

--- a/templates/parts/pc-skillvalues.html
+++ b/templates/parts/pc-skillvalues.html
@@ -1,6 +1,6 @@
 <section>
 
-  {{> "systems/shadowrun6-eden/templates/parts/section-skills-action.html" skills=system.skills}}
+  {{> "systems/shadowrun6-eden/templates/parts/section-skills-action.html" skills=skills}}
   {{> "systems/shadowrun6-eden/templates/parts/section-skills-knowledge.html" skills=system.skills}}
   {{> "systems/shadowrun6-eden/templates/parts/section-skills-language.html" skills=system.skills}}
 
