Fix that attributes of Drone items (not Actors) are not editable (#213)

--- a/templates/item/shadowrun6-gear-sheet.html
+++ b/templates/item/shadowrun6-gear-sheet.html
@@ -274,7 +274,7 @@
             <!-- ********** VEHICLES / DRONES ********** -->
             {{#if (or
             (eq item.system.type "VEHICLES")
-            (eq item.system.type "DRONES")
+            (eq (subString item.system.type 0 6) "DRONE_")
             )}}
             <table>
                 <tr>
