fix bodyware add accessories and ammo width resize

--- a/templates/parts/section-bodyware.html
+++ b/templates/parts/section-bodyware.html
@@ -48,6 +48,8 @@
        	<tr>
 			<td colspan="5">
 				<div class="collapsible-content closed" style="font-size: 0.8em;">
+					<div style="font-weight: bold;">{{ localize 'shadowrun6.label.accessories' }}</div>
+					<div>{{{item.enriched.accessories}}} &nbsp;</div>
 					<div style="font-weight: bold;">{{ localize 'shadowrun6.item.description' }}</div>
 					<div>{{{item.enriched.description}}} &nbsp;</div>
 				</div>
